# uniffi_test

./: Cargo.toml  Makefile  build.rs  uniffi.toml
src/: lib.rs  uniffi_test.udl
