[package]
name = "uniffi_test"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "uniffi_test"

[dependencies]
uniffi_macros = "0.17"
uniffi = {version = "0.17", features=["builtin-bindgen"]}
thiserror = "1.0"

[build-dependencies]
uniffi_build = {version = "0.17", features=["builtin-bindgen"]}